config/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: client
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj09/client:1.0
        name: client
        ports:
        - containerPort: 3000
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: client
  type: ClusterIP
