config/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj09/serwer:1.0
        name: server
        ports:
        - containerPort: 3001
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: server
  type: ClusterIP
