config/server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: server
    service: server
  name: server
spec:
  port:
    targetPort: 3001
  to:
    kind: ""
    name: server
